// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`FormTextSearchInput renders correctly with error 1`] = `
<label class="govuk-label"
       for="test-input"
>
  Test input
</label>
<span class="govuk-error-message"
      id="test-input-error"
      data-testid="test-input-error"
>
  <span class="govuk-visually-hidden">
    Error:
  </span>
  Field is required
</span>
<input aria-describedby="test-input-error"
       class="govuk-input searchInput govuk-input--error"
       id="test-input"
       type="text"
       value
       name="testInput"
>
`;

exports[`FormTextSearchInput renders correctly with hint 1`] = `
<label class="govuk-label"
       for="test-input"
>
  Test input
</label>
<div id="test-input-hint"
     class="govuk-hint"
>
  Fill me in
</div>
<input aria-describedby="test-input-hint"
       class="govuk-input searchInput"
       id="test-input"
       type="text"
       value
       name="testInput"
>
`;

exports[`FormTextSearchInput renders correctly with required props 1`] = `
<label class="govuk-label"
       for="test-input"
>
  Test input
</label>
<input class="govuk-input searchInput"
       id="test-input"
       type="text"
       value
       name="testInput"
>
`;

exports[`FormTextSearchInput renders with a specific width class 1`] = `
<label class="govuk-label"
       for="test-input"
>
  Test input
</label>
<div id="test-input-hint"
     class="govuk-hint"
>
  Fill me in
</div>
<input aria-describedby="test-input-hint"
       class="govuk-input searchInput govuk-input--width-20"
       id="test-input"
       type="text"
       value
       name="testInput"
>
`;
